search box overflow fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,15 +2,15 @@
 	/*outline: 1px solid;*/
 }
 
+	.search_navbar {
+		border: 0px;
+		margin: 0px;
+	}
+
 	.lightblue {
 		background-color: #d0e4f2;
 		color: #000;
 	}
-
-/*	.topspace {
-		padding-top: 6em;
-	}
-*/
 
 	.registered {
 		min-height: 5em;
